
Table sucursales {
  id int [pk, increment]
  nombre varchar(150) [not null]
  direccion text [not null]
  telefono varchar(20)
  email varchar(150)
  gerente varchar(200)
  horario_apertura time
  horario_cierre time
  capacidad int [default: 0]
  fecha_apertura date
  activa boolean [default: true]
  fecha_creacion timestamp [default: `CURRENT_TIMESTAMP`]
  fecha_actualizacion timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`]
}

Table usuarios {
  id int [pk, increment]
  nombre varchar(100) [not null]
  apellido varchar(100) [not null]
  email varchar(150) [unique, not null]
  password varchar(255) [not null]
  telefono varchar(20)
  rol varchar(20) [not null, default: 'mesero', note: 'admin, gerente, mesero, cocinero, cajero, dueño']
  activo boolean [default: true]
  fecha_creacion timestamp [default: `CURRENT_TIMESTAMP`]
  fecha_actualizacion timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`]
  id_sucursal int [ref: > sucursales.id]
}

Table categorias_productos {
  id int [pk, increment]
  nombre varchar(100) [not null, unique]
  descripcion text
  activa boolean [default: true]
  sucursal_id int [ref: > sucursales.id]
  fecha_creacion timestamp [default: `CURRENT_TIMESTAMP`]
}

Table inventario {
  id int [pk, increment]
  nombre varchar(150) [not null]
  descripcion text
  categoria_id int [ref: > categorias_productos.id]
  precio decimal(10,2) [not null, default: 0.00]
  costo decimal(10,2) [not null, default: 0.00]
  stock_actual int [not null, default: 0]
  stock_minimo int [not null, default: 0]
  unidad_medida varchar(20) [not null, default: 'unidad', note: 'unidad, kg, gr, lt, ml, porcion']
  sucursal_id int [ref: > sucursales.id]
  activo boolean [default: true]
  fecha_creacion timestamp [default: `CURRENT_TIMESTAMP`]
  fecha_actualizacion timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`]
}

Table clientes {
  id int [pk, increment]
  nombre varchar(100) [not null]
  apellido varchar(100)
  telefono varchar(20)
  email varchar(150)
  direccion text
  fecha_registro timestamp [default: `CURRENT_TIMESTAMP`]
  id_sucursal int [ref : <> sucursales.id]
}

Table comandas {
  id int [pk, increment]
  sucursal_id int [not null, ref: > sucursales.id]
  usuario_id int [not null, ref: > usuarios.id]
  estatus varchar(20) [default: 'abierta', note: 'abierta, cerrada, cancelada']
  total_pagado decimal(10,2) [default: 0.00]
  fecha_creacion timestamp [default: `CURRENT_TIMESTAMP`]
  fecha_actualizacion timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`]
  fecha_cierre timestamp
}

Table pagos {
  id int [pk, increment]
  comanda_id int [not null, ref: > comandas.id]
  usuario_id int [not null, ref: > usuarios.id]
  metodo_pago varchar(20) [not null, default: 'efectivo', note: 'efectivo, tarjeta, transferencia, mixto']
  monto_total decimal(10,2) [not null]
  monto_efectivo decimal(10,2) [default: 0.00]
  monto_tarjeta decimal(10,2) [default: 0.00]
  monto_transferencia decimal(10,2) [default: 0.00]
  monto_recibido decimal(10,2) [default: 0.00]
  cambio decimal(10,2) [default: 0.00]
  propina decimal(10,2) [default: 0.00]
  referencia_pago varchar(100)
  notas text
  fecha_pago timestamp [default: `CURRENT_TIMESTAMP`]
}

Table pedidos {
  id int [pk, increment]
  numero_pedido varchar(50) [unique, not null]
  cliente_id int [ref: > clientes.id]
  usuario_id int [not null, ref: > usuarios.id]
  sucursal_id int [not null, ref: > sucursales.id]
  comanda_id int [ref: > comandas.id]
  estado varchar(20) [default: 'pendiente', note: 'pendiente, en_preparacion, listo, entregado, cancelado']
  estado_pago varchar(20) [default: 'pendiente', note: 'pendiente, pagado, parcial']
  tipo_pedido varchar(20) [not null, default: 'mesa', note: 'mesa, domicilio, para_llevar']
  subtotal decimal(10,2) [not null, default: 0.00]
  impuestos decimal(10,2) [not null, default: 0.00]
  descuento decimal(10,2) [not null, default: 0.00]
  total decimal(10,2) [not null, default: 0.00]
  notas text
  fecha_pedido timestamp [default: `CURRENT_TIMESTAMP`]
  fecha_entrega timestamp
}

Table detalle_pedidos {
  id int [pk, increment]
  pedido_id int [not null, ref: > pedidos.id]
  producto_id int [not null, ref: > inventario.id]
  cantidad int [not null, default: 1]
  precio_unitario decimal(10,2) [not null]
  subtotal decimal(10,2) [not null]
  notas_item text
}

Table movimientos_inventario {
  id int [pk, increment]
  producto_id int [not null, ref: > inventario.id]
  tipo_movimiento varchar(20) [not null, note: 'entrada, salida, ajuste, merma']
  cantidad int [not null]
  motivo varchar(200)
  usuario_id int [not null, ref: > usuarios.id]
  sucursal_id int [not null, ref: > sucursales.id]
  referencia_pedido_id int [ref: > pedidos.id]
  fecha_movimiento timestamp [default: `CURRENT_TIMESTAMP`]
}

Table sesiones_usuario {
  id int [pk, increment]
  usuario_id int [not null, ref: > usuarios.id]
  token varchar(255) [unique, not null]
  ip_address varchar(45)
  fecha_inicio timestamp [default: `CURRENT_TIMESTAMP`]
  fecha_expiracion timestamp [not null]
  activa boolean [default: true]
}
